# speech-to-text-bot

./: .gitignore  README.md  bot_config.env  docker-compose.yml  speech_service_config.env
RecognitionBot/: Cargo.toml
SpeechRecognitionService/: Dockerfile  Program.cs  Recognizer.cs  SpeechRecognitionService.csproj  Startup.cs
recognition_bot/: Cargo.toml  Dockerfile  config.ini
recognition_bot/src/: bot.rs  main.rs  media_converter.rs  recognizer.rs  storage.rs
