[package]
name = "recognition_bot"
version = "0.1.0"
authors = ["Ilya Titkov <ilya@titkov.me>"]
edition = "2018"

[dependencies]
hyper = "0.12"
config = "0.9"
log = "0.4"
env_logger  = "0.6"
relegram = "0.1.12"
tokio-threadpool = "0.1"
futures = "0.1"
tempfile = "3.0"
serde = { version = "1.0", features = ["derive"] }
